# Aperture

./: .env.example  .gitignore  Dockerfile  README.md  aperture.db  celery_run.py  celery_tasks.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  run_db.py  run_server.py  tz.txt
server/: __init__.py
server/db/: __init__.py  config.py
server/db/models/: __init__.py  click_static.py  link.py  user.py
server/middlewares/: __init__.py  meta_middleware.py
server/routers/: __init__.py  auth.py  links.py
server/schemas/: __init__.py  link.py  user.py
server/tests/: contests.py  test_endpoinds.py
server/utils/: __init__.py  jwt_config.py  link_feats.py
