[project]
name = "aperture"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexgDevs",email = "asmetanin014@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "redis (>=6.4.0,<7.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "validator (>=0.7.1,<0.8.0)",
    "validators (>=0.35.0,<0.36.0)",
    "faker (>=37.6.0,<38.0.0)",
    "security (>=1.3.1,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "user-agent (>=0.1.14,<0.2.0)",
    "user-agents (>=2.2.0,<3.0.0)",
    "asgiref (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
